# moonlight-python

./: .gitignore  .gitmodules  CMakeLists.txt  PYPI_README.md  README.md  build_wheels.sh  pyproject.toml
.github/workflows/: build-wheels.yml  tests.yml
moonlight_python/: __init__.py  _stream_manager.py  buffer.py  config.py  decoder.py  discovery.py  exceptions.py  frame.py  http_client.py  identity.py  pairing.py  recorder.py  server.py  stream.py
tests/: test_config.py  test_frame.py  test_http_xml.py  test_identity.py  test_pairing_crypto.py  test_recorder.py
