[build-system]
requires = ["scikit-build-core>=0.5", "cffi>=1.15"]
build-backend = "scikit_build_core.build"

[project]
name = "moonlight-python"
version = "0.1.0"
description = "Python client for Moonlight/Sunshine game streaming — receive decoded video frames as numpy arrays"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "requests>=2.28",
    "zeroconf>=0.80",
    "cffi>=1.15",
    "av>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["moonlight_python"]
