[build-system]
requires = ["scikit-build-core>=0.5", "cffi>=1.15", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "moonlight-python"
dynamic = ["version"]
description = "Python client for Moonlight/Sunshine game streaming — receive decoded video frames as numpy arrays"
readme = "PYPI_README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "requests>=2.28",
    "zeroconf>=0.80",
    "cffi>=1.15",
    "av>=10.0",
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
cmake.build-type = "Release"
wheel.packages = ["moonlight_python"]
sdist.include = ["moonlight-common-c/", "moonlight-common-c/**"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build = ["cp310-manylinux_x86_64", "cp311-manylinux_x86_64", "cp312-manylinux_x86_64", "cp313-manylinux_x86_64", "cp314-manylinux_x86_64",
    "cp310-win_amd64", "cp311-win_amd64", "cp312-win_amd64", "cp313-win_amd64", "cp314-win_amd64",
    "cp310-macosx_arm64", "cp311-macosx_arm64", "cp312-macosx_arm64", "cp313-macosx_arm64","cp314-macosx_arm64",
    "cp310-macosx_x86_64", "cp311-macosx_x86_64", "cp312-macosx_x86_64", "cp313-macosx_x86_64", "cp314-macosx_x86_64",
]
test-command = "pytest {project}/tests -v"
test-requires = ["pytest"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "yum install -y openssl-devel"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path \"C:/Program Files/OpenSSL/bin\" --include libcrypto-3-x64.dll -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = "brew install openssl@3"

[tool.cibuildwheel.macos.environment]
OPENSSL_ROOT_DIR = "/opt/homebrew/opt/openssl@3"
MACOSX_DEPLOYMENT_TARGET = "15.0"

